# replacer

./: Cargo.toml  README.md  azure-pipelines.yml  out.txt  rust-build.yml  template.txt  vars.json
binaries/m1/: replacer
binaries/replacer-lin/: replacer
binaries/replacer-mac/: replacer
binaries/x64/replacer-x64-lin/: replacer
binaries/x64/replacer-x64-mac/: replacer
pipeline-templates/: rust-build.yml
src/: lib.rs  main.rs
