[package]
name = "replacer"
version = "0.1.0"
authors = ["Raymond Doetjes <rdoetjes@phonax.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[profile.release]
#strip = "debuginfo"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[dependencies.html-escape]
version = "*"
default-features = false